--- a/固件升级.md
+++ b/固件升级.md
@@ -1,28 +1,61 @@
-## 蓝牙固件升级 
+# 蓝牙固件升级指南
 
-1、调用 wx.downloadFile下载资源，从远程地址中下载bin包到本地
-    (1) 需要在微信公众平台上，配置一下资源域名才可以下载，和服务器域名配置一样
-    (2) 单个文件不能超过200M
-    (3) 下载成功回调参数，会有个临时文件路径字段 tempFilePath
+## 1. 下载固件文件
+使用 `wx.downloadFile` 从远程地址下载bin包到本地：
 
-2、读取文件
-    (1) 调用wx.getFileSystemManager() 全局唯一的文件管理器，返回值 FileSystemManager对象，然后FileSystemManager.readFile(tempFilePath)
-    (2) wx.getFileSystemManager().readFile(tempFilePath)
-    (3) readFile方法，有个encoding字段，用于指定读取后的内容格式，比如base64或二进制等
-    (4) 不传 encoding字段，默认为ArrayBuffer格式的二进制
+- 注意事项：
+  - 需要在微信公众平台配置资源域名才可以下载，配置方式与服务器域名配置相同
+  - 单个文件大小限制为200M
+  - 下载成功后回调参数中会包含临时文件路径字段 `tempFilePath`
 
-3、文件切片
-由于文件太大，并且蓝牙通信中，传输时有大小限制，所以需要将文件切片
-    (1) ArrayBuffer不能直接操作，需要转成 Uint8Array，这时就可以操作数组了，遍历截取，可以指定每次截取多长。
-    (2) 将每次截取的数据，转换成base64，然后组装参数，然后转成字符串，然后转换回ArrayBuffer格式的二进制数据。不组装参数也可以 base64》ArrayBuffer
+## 2. 读取文件
+通过文件系统管理器读取文件内容：
 
+1. 调用 `wx.getFileSystemManager()` 获取全局唯一的文件管理器
+   - 返回值为 `FileSystemManager` 对象
+2. 使用 `FileSystemManager.readFile(tempFilePath)` 读取文件
+   - 可以通过 `encoding` 字段指定读取后的内容格式（如base64或二进制等）
+   - 不传 `encoding` 字段时，默认返回 `ArrayBuffer` 格式的二进制数据
 
-总结：
-1、FileSystemManager对象还有很多其它的方法，具体可以看文档
-2、蓝牙通信，发送数据给设备，最终都需要转成ArrayBuffer二进制格式，再发送。
-3、上面读取文件，为什么不直接读取成ArrayBuffer的直接发送呢？数据格式还要转来转去。
-    (1) 因为 ArrayBuffer不支持操作，也就是不支持切片，所以要转换成可操作的数据
+## 3. 文件切片处理
+由于文件较大且蓝牙通信有传输大小限制，需要对文件进行切片处理：
 
-4、发送文件，一般是用于固件升级，当发送文件时，第一次使用的是异步发送，但嵌入式接收不了，一直升级不成功。然后换成同步的方式，发送1包》等待设备上报响应》再发送下一包，如此循环。当然也需要考虑超时的问题（如果设备一直不上报响应）
-    (1) 有出现合包的情况，嵌入式说它那边处理。
-5、期间蓝牙可能会断开，是否需要考虑断点续传？
+1. 数据转换步骤：
+   - 将 `ArrayBuffer` 转换为 `Uint8Array`（因为 `ArrayBuffer` 不能直接操作）
+   - 遍历 `Uint8Array` 进行数据切片，可指定每次切片长度
+   - 将切片数据转换为 base64 格式
+   - 组装参数并转换为字符串
+   - 最后转回 `ArrayBuffer` 格式的二进制数据
+
+## 注意事项
+
+### 文件系统管理
+- `FileSystemManager` 对象提供了丰富的文件操作方法，详细信息请参考官方文档
+
+### 数据格式转换说明
+- 蓝牙通信时，发送给设备的数据必须是 `ArrayBuffer` 二进制格式
+- 为什么不直接读取成 `ArrayBuffer` 格式发送？
+  - 因为 `ArrayBuffer` 不支持直接操作（如切片），需要转换成可操作的数据格式
+
+### 文件发送策略
+固件升级时的发送策略：
+
+1. 同步发送方式（推荐）：
+   - 发送一个数据包
+   - 等待设备上报响应
+   - 收到响应后发送下一包
+   - 需要考虑超时处理机制
+
+2. 注意事项：
+   - 异步发送可能导致设备接收失败
+   - 可能出现合包情况（需要嵌入式端处理）
+   - 考虑蓝牙断开时的断点续传机制
+
+### 潜在问题
+1. 数据包接收：
+   - 需要考虑设备接收能力
+   - 合包情况的处理
+   
+2. 连接稳定性：
+   - 蓝牙断开的处理机制
+   - 是否需要实现断点续传功能
